<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/pref_category_clock_widget"
        android:key="clock_widget_settings"
        style="@style/PreferenceCategoryStyle">

        <SwitchPreferenceCompat
            android:key="show_clock"
            android:title="@string/pref_show_clock_title"
            android:summary="@string/pref_show_clock_summary"
            android:defaultValue="true"/>

        <SwitchPreferenceCompat
            android:key="show_date"
            android:title="@string/pref_show_date_title"
            android:summary="@string/pref_show_date_summary"
            android:defaultValue="true"/>

        <ListPreference
            android:key="clock_format"
            android:title="@string/pref_clock_format_title"
            android:summary="@string/pref_clock_format_summary"
            android:entries="@array/clock_format_entries"
            android:entryValues="@array/clock_format_values"
            android:defaultValue="24h"/>

        <ListPreference
            android:key="clock_position"
            android:title="@string/pref_clock_position_title"
            android:summary="@string/pref_clock_position_summary"
            android:entries="@array/widget_position_entries"
            android:entryValues="@array/widget_position_values"
            android:defaultValue="TOP_START"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_weather_widget"
        android:key="weather_widget_settings"
        style="@style/PreferenceCategoryStyle">

        <SwitchPreferenceCompat
            android:key="show_weather"
            android:title="@string/pref_show_weather_title"
            android:summary="@string/pref_show_weather_summary"
            android:defaultValue="false"/>

        <ListPreference
            android:key="weather_position"
            android:title="@string/pref_weather_position_title"
            android:summary="@string/pref_weather_position_summary"
            android:entries="@array/widget_position_entries"
            android:entryValues="@array/widget_position_values"
            android:defaultValue="TOP_END"
            app:dependency="show_weather"/>

        <SwitchPreferenceCompat
            android:key="weather_use_celsius"
            android:title="@string/pref_weather_unit_title"
            android:summary="@string/pref_weather_unit_summary"
            android:defaultValue="true"
            app:dependency="show_weather"/>

        <ListPreference
            android:key="weather_update_interval"
            android:title="@string/pref_weather_update_interval_title"
            android:summary="@string/pref_weather_update_interval_summary"
            android:entries="@array/weather_update_interval_entries"
            android:entryValues="@array/weather_update_interval_values"
            android:defaultValue="1800"
            app:dependency="show_weather"/>

        <SwitchPreferenceCompat
            android:key="weather_use_device_location"
            android:title="@string/weather_use_device_location_title"
            android:summary="@string/weather_use_device_location_summary"
            android:defaultValue="true"
            app:dependency="show_weather" />

        <EditTextPreference
            android:key="weather_manual_location"
            android:title="@string/weather_manual_location_title"
            android:summary="@string/weather_manual_location_summary"
            android:dependency="weather_use_device_location"
            android:defaultValue=""
            app:dependency="show_weather" />

    </PreferenceCategory>

</PreferenceScreen>