<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:key="security_enabled"
        android:title="@string/pref_security_enabled_title"
        android:summary="@string/pref_security_enabled_summary"
        android:defaultValue="false"/>

    <ListPreference
        android:key="auth_method"
        android:title="@string/pref_auth_method_title"
        android:summary="@string/pref_auth_method_summary"
        android:entries="@array/auth_method_entries"
        android:entryValues="@array/auth_method_values"
        android:defaultValue="biometric"
        app:dependency="security_enabled"/>

    <EditTextPreference
        android:key="passcode"
        android:title="@string/pref_passcode_title"
        android:summary="@string/pref_passcode_summary"
        app:dependency="security_enabled"/>

    <SwitchPreferenceCompat
        android:key="allow_biometric"
        android:title="@string/pref_allow_biometric_title"
        android:summary="@string/pref_allow_biometric_summary"
        android:defaultValue="true"
        app:dependency="security_enabled"/>

    <SwitchPreferenceCompat
        android:key="remove_security_on_minimize"
        android:title="@string/pref_remove_security_on_minimize_title"
        android:summary="@string/pref_remove_security_on_minimize_summary"
        android:defaultValue="false"
        app:dependency="security_enabled"/>
</PreferenceScreen>