<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_remove_selected"
        android:title="@string/remove_selected"
        android:icon="@drawable/ic_delete"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_date_newest"
                android:title="@string/sort_date_newest"/>
            <item
                android:id="@+id/sort_date_oldest"
                android:title="@string/sort_date_oldest"/>
            <item
                android:id="@+id/sort_by_source"
                android:title="@string/sort_by_source"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_deselect_all"
        android:title="@string/deselect_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_group_by"
        android:title="@string/group_by">
        <menu>
            <item
                android:id="@+id/group_by_source"
                android:title="@string/group_by_source"/>
        </menu>
    </item>
</menu>