<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:key="random_order"
        android:title="@string/pref_random_order_title"
        android:summary="@string/pref_random_order_summary"
        android:defaultValue="true"
        android:icon="@drawable/ic_shuffle" />

    <ListPreference
        android:key="photo_scale"
        android:title="Photo Display Mode"
        android:summary="%s"
        android:entries="@array/photo_scale_entries"
        android:entryValues="@array/photo_scale_values"
        android:defaultValue="fill"
        app:iconSpaceReserved="false" />

    <ListPreference
        android:key="photo_enhancement"
        android:title="Visual Enhancement"
        android:summary="%s"
        android:entries="@array/photo_enhancement_entries"
        android:entryValues="@array/photo_enhancement_values"
        android:defaultValue="none"
        app:iconSpaceReserved="false" />

    <ListPreference
        android:key="transition_effect"
        android:title="@string/pref_transition_effect_title"
        android:summary="@string/pref_transition_effect_summary"
        android:entries="@array/transition_effects"
        android:entryValues="@array/transition_effects_values"
        android:defaultValue="fade"
        android:icon="@drawable/ic_transition" />

    <SeekBarPreference
        android:key="transition_duration"
        android:title="@string/pref_transition_duration_title"
        android:summary="@string/pref_transition_duration_summary"
        app:min="1"
        android:max="5"
        android:defaultValue="2"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:updatesContinuously="true"
        android:icon="@drawable/ic_timer" />

    <SeekBarPreference
        android:key="photo_interval"
        android:title="@string/pref_photo_interval_title"
        android:summary="@string/pref_photo_interval_summary"
        app:min="5"
        android:max="60"
        android:defaultValue="5"
        app:seekBarIncrement="5"
        app:showSeekBarValue="true"
        app:updatesContinuously="true"
        android:persistent="true"
        android:icon="@drawable/ic_update" />

</PreferenceScreen>