<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Local Photos Section -->
    <PreferenceCategory
        android:key="local_photos_category"
        android:title="@string/photo_source_local"
        app:iconSpaceReserved="true"
        app:icon="@drawable/ic_photo_library">

        <SwitchPreferenceCompat
            android:key="local_photos_enabled"
            android:title="@string/photo_source_local"
            android:summary="@string/pref_select_local_photos_summary"
            app:iconSpaceReserved="true" />

        <Preference
            android:key="select_local_photos"
            android:title="@string/select_photos"
            android:dependency="local_photos_enabled"
            app:iconSpaceReserved="true" />
    </PreferenceCategory>

    <!-- Google Photos Section -->
    <PreferenceCategory
        android:key="google_photos_category"
        android:title="@string/photo_source_google"
        app:iconSpaceReserved="true"
        app:icon="@drawable/ic_google_photos">

        <SwitchPreferenceCompat
            android:key="google_photos_enabled"
            android:title="@string/photo_source_google"
            android:summary="@string/pref_google_photos_signin_summary"
            app:iconSpaceReserved="true" />

        <Preference
            android:key="select_google_albums"
            android:title="@string/pref_select_albums_title"
            android:dependency="google_photos_enabled"
            app:iconSpaceReserved="true" />
    </PreferenceCategory>

</PreferenceScreen>